src/objects/Master_Review_List__c.object
<CustomObject>
    <fields>
        <fullName>Application_Letter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatic_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Checklist type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Review_Completion_Time_Hours__c</fullName>
        <label>Estimated Review Completion Time(Hours)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Logic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_object_status_after_approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent object status after approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinstatement_Expiration_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstatement Expiration Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reinstatement_letter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinstatement letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Due Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Expiration_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Expiration Logic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Letter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Due Date</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>external id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Master Review List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Renewal_Expiration_Logic__c</columns>
        <columns>Estimated_Review_Completion_Time_Hours__c</columns>
        <columns>Expiration_Logic__c</columns>
        <columns>Renewal_Letter__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Automatic_Renewal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Review List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>